<resources>
    <string name="app_name">ejericioprueba</string>
    <string name="nombres">Ingrese su nombre</string>
    <string name="apellidos">Ingrese su apellido</string>
    <string name="telefono">Ingrese su telefono</string>
    <string name="btn_procesar">Procesar</string>
    <string name="edad">Ingrese edad</string>
    <string name="correo">Ingrese correo</string>
    <string name="PantallaIngreso">Agregar persona</string>
    <string name="PatallaLista">Lista personas</string>
</resources>