<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nombres"
        android:layout_width="380dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/nombres"
        android:inputType="text"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="12dp" />

    <EditText
        android:id="@+id/apellidos"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/nombres"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnprocesar"
        android:layout_width="275dp"
        android:layout_height="52dp"
        android:text="@string/btn_procesar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <EditText
        android:id="@+id/edad"
        android:layout_width="380dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/edad"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@+id/apellidos"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="379dp"
        android:layout_height="39dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad" />

</androidx.constraintlayout.widget.ConstraintLayout>